QPID-7134: ensure content object is reset when bytes are set

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1734476 13f79535-47bb-0310-9956-ffa450edef68